--- a/account/templates/account/orderform.html
+++ b/account/templates/account/orderform.html
@@ -3,14 +3,18 @@
 
 
 {% block content %}
-
+    
     <form class="form mt-8 bg-white/[0.8] rounded p-8 md:w-5/12 w-11/12 text-center" method="POST" action="{% url 'create_order' %}">
         {% csrf_token %}
         <div class="customer_form grid grid-cols-1">
             {{orderForm}}
         </div>
         <input class="py-1 px-4 mt-4 bg-blue-500 rounded hover:bg-blue-700 text-white" type="submit" value="Create">
+        <div class="mt-14">
+            <button><a class="py-1 px-4 mt-4 bg-red-500 rounded hover:bg-red-700 text-white" href="{% url 'home' %}">Go Back</a></button>
+        </div>
     </form>
+    
 
 
 {% endblock %}
