--- a/account/templates/account/user.html
+++ b/account/templates/account/user.html
@@ -1,10 +1,20 @@
 {% extends 'account/base.html' %}
 
 {% block content %}
+{% if messages %}
+        {% for message in messages %}
+            <p class="px-8 py-1 bg-green-400 text-green-900 m-t-8 rounded">{{message}}</p>
+        {% endfor %}
+    {% endif %}
 {% include 'account/status.html' %}
-
+<div class="w-11/12 bg-white rounded p-2 md:my-0 my-1">
+    <div>
+        <button class="block hover:text-white hover:bg-sky-600 w-full rounded text-sky-600 text-xs border border-sky-400 my-1 text-center py-1"><a class="block w-full" href="{% url 'create_order' %}">Place Order</a></button>
+    </div>
+</div>
 
 <div class="text-xs text-gray-700 bg-gray-50 w-11/12 mt-2 overflow-x-auto ">
+    
     <table class="w-full table py-4 px-8 bg-white rounded-bl rounded " >
         <thead class="text-xs text-gray-700 text-left uppercase bg-white border-b ">
             <tr class="">
